# django-authjs

./: .gitignore  README.md  index.d.ts  index.js  index.ts  manage.py  package-lock.json  package.json  pyproject.toml  ruff.toml
authjs/: adapter.py  admin.py  apps.py  middleware.py  models.py  tests.py  urls.py
authjs/migrations/: 0001_initial.py
tests/: settings.py  urls.py
